--- a/package.json
+++ b/package.json
@@ -11,11 +11,16 @@
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
     "expo": "~47.0.8",
+    "expo-constants": "^14.0.2",
+    "expo-linear-gradient": "~12.0.1",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-check-box": "^2.1.7",
-    "react-native-elements": "^3.4.2"
+    "react-native-elements": "^3.4.2",
+    "react-native-paper": "^4.12.5",
+    "react-native-radial-gradient": "^1.1.2",
+    "react-native-svg": "^13.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
