--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@react-navigation/native": "^6.0.16",
+    "@react-navigation/native-stack": "^6.9.4",
     "expo": "~47.0.8",
     "expo-constants": "^14.0.2",
     "expo-linear-gradient": "~12.0.1",
@@ -20,7 +22,12 @@
     "react-native-elements": "^3.4.2",
     "react-native-paper": "^4.12.5",
     "react-native-radial-gradient": "^1.1.2",
-    "react-native-svg": "^13.6.0"
+    "react-native-safe-area-context": "^3.3.2",
+    "react-native-screens": "^3.18.2",
+    "react-native-svg": "^13.6.0",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
